--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ custom.datasource.ds1.password=root
 
 #custom.datasource.ds2.type=com.zaxxer.hikari.HikariDataSource
 custom.datasource.ds2.driverClassName =com.mysql.jdbc.Driver
-custom.datasource.ds2.url=jdbc:mysql://localhost:3306/test
+custom.datasource.ds2.url=jdbc:mysql://localhost:3306/test1
 custom.datasource.ds2.username=root
 custom.datasource.ds2.password=root
 
@@ -35,7 +35,7 @@ custom.datasource.ds3.url=jdbc:mysql://localhost:3306/test
 custom.datasource.ds3.username=root
 custom.datasource.ds3.password=root
 
-# 下面为连接池的补充设置，应用到上面所有数据源中
+# 下面为连接池的补充设置，应用到上面所有数据源中，所有数据源通过dataBinder进行属性绑定
 spring.datasource.maximum-pool-size=100
 spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
@@ -45,3 +45,19 @@ spring.datasource.validation-query=SELECT 1
 spring.datasource.test-on-borrow=false
 spring.datasource.test-while-idle=true
 spring.datasource.time-between-eviction-runs-millis=18800
+
+
+########################################################
+### Java Persistence Api
+########################################################
+# Specify the DBMS
+spring.jpa.database = MYSQL
+# Show or not log for each sql query
+spring.jpa.show-sql = true
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto = update
+# Naming strategy
+#[org.hibernate.cfg.ImprovedNamingStrategy  #org.hibernate.cfg.DefaultNamingStrategy]
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.DefaultNamingStrategy
+# stripped before adding them to the entity manager)
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
