--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@
 
 # 主数据源，默认的
 #spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
@@ -17,6 +18,7 @@ spring.datasource.password=root
 
 # 更多数据源
 custom.datasource.names=ds1,ds2,ds3
+custom.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #custom.datasource.ds1.type=com.zaxxer.hikari.HikariDataSource
 custom.datasource.ds1.driverClassName =com.mysql.jdbc.Driver
 custom.datasource.ds1.url=jdbc:mysql://localhost:3306/test
@@ -24,12 +26,14 @@ custom.datasource.ds1.username=root
 custom.datasource.ds1.password=root
 
 #custom.datasource.ds2.type=com.zaxxer.hikari.HikariDataSource
+custom.datasource.type=com.alibaba.druid.pool.DruidDataSource
 custom.datasource.ds2.driverClassName =com.mysql.jdbc.Driver
 custom.datasource.ds2.url=jdbc:mysql://localhost:3306/test1
 custom.datasource.ds2.username=root
 custom.datasource.ds2.password=root
 
 #custom.datasource.ds3.type=com.zaxxer.hikari.HikariDataSource
+custom.datasource.type=com.alibaba.druid.pool.DruidDataSource
 custom.datasource.ds3.driverClassName =com.mysql.jdbc.Driver
 custom.datasource.ds3.url=jdbc:mysql://localhost:3306/test
 custom.datasource.ds3.username=root
